@@ -1,3 +1,4 @@
+-  Added configuration file for Merten 50x5xx Roller Shutter Module (Sascha)
 Version 1.3
  - Fixed Issue 383 - Update Remotec ZXT-120 Config file thanks to yy.bendavid & gizmocuz (Alex)
  - Fixed Issue 392 - Add Qubino ZMNHJA2 Config file thanks to nicoserveur (Alex)
